--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,24 @@ html {
 
 /*HEADER AND ITS CHILDREN*/
 
+/*burger menu*/
+.burger {
+    height: 1.5rem;
+    width: 1.5rem;
+    background-color: white;
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.line {
+    height: 15%;
+    width: 100%;
+    border-radius: 4px;
+    background-color: black;
+}
+
 header {
     display: flex;
     width: 100%;
@@ -197,9 +215,21 @@ footer {
 
 @media screen and (max-width: 700px) {
     /*HEADER*/
+    header {
+        flex-direction: row;
+        justify-content: end;
+    }
+    .header-container {
+        flex-direction: column;
+    }
     .header-container nav {
         display: none;
     }
+    .burger {
+        display: flex;
+        margin-right: 2%;
+    }
+
 
     /*MAIN*/
     .blue-background {
@@ -207,6 +237,11 @@ footer {
     }
     .sub-row {
         flex-direction: column;
+    }
+
+    main img {
+        margin-left: 0;
+        margin-right: 0;
     }
 
     /*FOOTER*/
