--- a/css/styles.css
+++ b/css/styles.css
@@ -198,6 +198,16 @@ footer {
     cursor: pointer;
 }
 
+footer a {
+    font-size: 1rem;
+    display: none;
+    text-decoration: none;
+    color: white;
+    background-color: rgb(84, 84, 84);
+    text-align: center;
+    padding: 2%;
+}
+
 @media screen and (max-width: 900px) {
     .header-container {
         flex-direction: column;
@@ -247,11 +257,17 @@ footer {
     /*FOOTER*/
     footer {
         background-color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .icons-container {
         width: 100%;
         padding: 2% 0 2% 0;
         justify-content: space-evenly;
         background-color: lightblue;
+    }
+    footer a {
+        display: flex;
     }
 }
