--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
 }
 
 html {
-    font-size: calc(15px + 0.390625vw); /*REM*/
+    font-size: calc(15px + 0.390625vw);
+    /*REM*/
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
 }
@@ -84,16 +85,12 @@ main {
     justify-content: center;
 }
 
-main img {
-    margin: 1%;
-}
-
 /*MAIN.1 - .blue-background*/
 
 .blue-background {
     height: 95vh;
     background-image: url("../img/laranja\ azul\ recorte.png");
-    background-position:right;
+    background-position: right;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -108,7 +105,8 @@ main img {
     max-width: 1600px;
 }
 
-.blue-background h2, .blue-background p {
+.blue-background h2,
+.blue-background p {
     width: 80%;
     max-width: 1600px;
     color: white;
@@ -150,12 +148,28 @@ main img {
     width: 100%;
 }
 
+.row-large-screen .sub-row:last-of-type {
+    margin-left: 1%;
+}
+
 .sub-row {
     display: flex;
 }
 
 .img-matrix img {
     transition: .5s;
+}
+
+.img-matrix img {
+    margin: 1%;
+}
+
+.sub-row img:first-of-type {
+    margin-left: 0;
+}
+
+.sub-row img:last-of-type {
+    margin-right: 0;
 }
 
 .img-matrix img:hover {
@@ -199,7 +213,8 @@ footer {
     cursor: pointer;
 }
 
-footer a { /*Topo link*/
+footer a {
+    /*Topo link*/
     font-size: 1rem;
     display: none;
     text-decoration: none;
@@ -214,29 +229,40 @@ footer a { /*Topo link*/
     .header-container {
         flex-direction: column;
     }
+
+    .row-large-screen .sub-row:last-of-type {
+        margin-left: 0;
+    }
+
     .header-container nav {
         width: 100%;
     }
+
     .row-large-screen {
         flex-direction: column;
     }
+
     .footer-container {
         flex-direction: column;
     }
 }
 
 @media screen and (max-width: 700px) {
+
     /*HEADER*/
     header {
         flex-direction: row;
         justify-content: end;
     }
+
     .header-container {
         flex-direction: column;
     }
+
     .header-container nav {
         display: none;
     }
+
     .burger {
         display: flex;
         margin-right: 2%;
@@ -247,13 +273,13 @@ footer a { /*Topo link*/
     .blue-background {
         background-position: 75% 25%;
     }
+
     .sub-row {
         flex-direction: column;
     }
 
-    main img {
-        margin-left: 0;
-        margin-right: 0;
+    .sub-row img {
+        margin: 1% 0 1% 0;
     }
 
     /*FOOTER*/
@@ -263,23 +289,27 @@ footer a { /*Topo link*/
         flex-direction: column;
         align-items: center;
     }
+
     .icons-container {
         width: 100%;
         padding: 2% 0 2% 0;
         justify-content: space-evenly;
         background-color: lightblue;
     }
+
     .p-container {
         display: flex;
         flex-direction: column;
         width: 70%;
     }
+
     .text-container {
         display: flex;
         width: 100%;
         justify-content: space-between;
         align-items: center;
     }
+
     footer a {
         display: block;
     }
