--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,9 @@ main {
 .blue-background {
     height: 95vh;
     background-image: url("../img/laranja\ azul\ recorte.png");
-    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 55% 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -135,46 +137,22 @@ main {
 .img-matrix {
     width: 80%;
     max-width: 1600px;
-    padding: 1% 0 1% 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     align-self: center;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-
+    margin: 5% 0 5% 0;
+    gap: 1rem;
 }
 
-.row-large-screen {
-    display: flex;
+.img-matrix img {
     width: 100%;
-}
-
-.row-large-screen .sub-row:last-of-type {
-    margin-left: 1%;
-}
-
-.sub-row {
-    display: flex;
-}
-
-.img-matrix img {
+    height: 100%;
+    object-fit: cover;
     transition: .5s;
-}
-
-.img-matrix img {
-    margin: 1%;
-}
-
-.sub-row img:first-of-type {
-    margin-left: 0;
-}
-
-.sub-row img:last-of-type {
-    margin-right: 0;
 }
 
 .img-matrix img:hover {
     transform: scale(1.1);
-    cursor: pointer;
 }
 
 /*FOOTER*/
@@ -230,16 +208,12 @@ footer a {
         flex-direction: column;
     }
 
-    .row-large-screen .sub-row:last-of-type {
-        margin-left: 0;
-    }
-
     .header-container nav {
         width: 100%;
     }
 
-    .row-large-screen {
-        flex-direction: column;
+    .img-matrix {
+        grid-template-columns: 1fr 1fr;
     }
 
     .footer-container {
@@ -274,13 +248,10 @@ footer a {
         background-position: 75% 25%;
     }
 
-    .sub-row {
-        flex-direction: column;
+    .img-matrix {
+        grid-template-columns: 1fr;
     }
 
-    .sub-row img {
-        margin: 1% 0 1% 0;
-    }
 
     /*FOOTER*/
     footer {
