--- a/css/styles.css
+++ b/css/styles.css
@@ -1,94 +1,15 @@
-* {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    min-width: 0;
-}
-
 html {
-    font-size: calc(15px + 0.390625vw);
-    /*REM*/
     font-family: 'Montserrat', sans-serif;
+    font-size: calc(13px + 0.390625vw);
     scroll-behavior: smooth;
 }
 
-.active {
-    font-weight: bold;
+.navbar-brand {
+    font-size: 1.5rem;
 }
-
-/*HEADER AND ITS CHILDREN*/
-
-/*burger menu*/
-.burger {
-    height: 1.5rem;
-    width: 1.5rem;
-    background-color: white;
-    display: none;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.line {
-    height: 15%;
-    width: 100%;
-    border-radius: 4px;
-    background-color: black;
-}
-
-header {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    padding: 1% 0 1% 0;
-    position: fixed;
-    background-color: white;
-    z-index: 1;
-}
-
-.header-container {
-    width: 80%;
-    max-width: 1600px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-container nav {
-    width: 50%;
-}
-
-.nav-list {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.nav-list li {
-    list-style: none;
-    transition: 0.5s;
-}
-
-
-.nav-list li:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-/*MAIN*/
-
-main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-/*MAIN.1 - .blue-background*/
 
 .blue-background {
-    height: 95vh;
+    height: 80vh;
     background-image: url("../img/laranja\ azul\ recorte.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -99,24 +20,10 @@ main {
     width: 100%;
 }
 
-.text-position {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    align-self: center;
-    max-width: 1600px;
-}
-
-.blue-background h2,
-.blue-background p {
-    width: 80%;
-    max-width: 1600px;
-    color: white;
-}
-
 .blue-background h2 {
     font-weight: bold;
     font-size: 3rem;
+    margin-left: 0;
     margin-bottom: 3%;
     display: flex;
     flex-wrap: wrap;
@@ -136,29 +43,19 @@ main {
     transition: 0.5s;
     width: fit-content;
     align-self: flex-start;
+    margin: 0;
 }
 
 .blue-background p:hover {
     transform: scale(1.1);
+    cursor: pointer;
     border-bottom: 1px solid white;
 }
 
 /*MAIN.2 - .img-matrix*/
 
-.img-matrix {
-    width: 80%;
-    max-width: 1600px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    align-self: center;
-    margin: 5% 0 5% 0;
-    gap: 1rem;
-}
 
 .img-matrix img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
     transition: .5s;
 }
 
@@ -215,44 +112,12 @@ footer a {
 }
 
 @media screen and (max-width: 900px) {
-    .header-container {
-        flex-direction: column;
-    }
-
-    .header-container nav {
-        width: 100%;
-    }
-
-    .img-matrix {
-        grid-template-columns: 1fr 1fr;
-    }
-
     .footer-container {
         flex-direction: column;
     }
 }
 
 @media screen and (max-width: 700px) {
-
-    /*HEADER*/
-    header {
-        flex-direction: row;
-        justify-content: end;
-    }
-
-    .header-container {
-        flex-direction: column;
-    }
-
-    .header-container nav {
-        display: none;
-    }
-
-    .burger {
-        display: flex;
-        margin-right: 2%;
-    }
-
 
     /*MAIN*/
     .blue-background {
