--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,14 @@ html {
     scroll-behavior: smooth;
 }
 
+
+/*css override*/
 .navbar-brand {
     font-size: 1.5rem;
+}
+
+.active {
+    font-weight: bold;
 }
 
 .blue-background {
@@ -53,8 +59,6 @@ html {
 }
 
 /*MAIN.2 - .img-matrix*/
-
-
 .img-matrix img {
     transition: .5s;
 }
@@ -64,100 +68,20 @@ html {
 }
 
 /*FOOTER*/
-footer {
-    width: 100%;
-    display: flex;
-    background-color: lightgray;
-    justify-content: center;
-    padding: 2% 0 2% 0;
-}
-
-.footer-container {
-    width: 80%;
-    max-width: 1600px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.footer-container p {
-    font-weight: 300;
+.copyright {
     font-size: 0.7rem;
 }
 
-.icons-container {
-    width: 30%;
-    display: flex;
-    justify-content: space-evenly;
+ion-icon {
+    font-size: 1.5rem;
 }
 
-.icons-container ion-icon {
-    font-size: 1.7rem;
-}
-
-.icons-container ion-icon:hover {
-    cursor: pointer;
-}
-
-footer a {
-    /*Topo link*/
-    font-size: 1rem;
-    display: none;
+.link {
     text-decoration: none;
-    color: white;
-    background-color: rgb(84, 84, 84);
     text-align: center;
-    padding: 2%;
-    border-radius: 5px;
-}
-
-@media screen and (max-width: 900px) {
-    .footer-container {
-        flex-direction: column;
-    }
-}
-
-@media screen and (max-width: 700px) {
-
-    /*MAIN*/
-    .blue-background {
-        background-position: 75% 25%;
-    }
-
-    .img-matrix {
-        grid-template-columns: 1fr;
-    }
-
-
-    /*FOOTER*/
-    footer {
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .icons-container {
-        width: 100%;
-        padding: 2% 0 2% 0;
-        justify-content: space-evenly;
-        background-color: lightblue;
-    }
-
-    .p-container {
-        display: flex;
-        flex-direction: column;
-        width: 70%;
-    }
-
-    .text-container {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    footer a {
-        display: block;
-    }
+    background-color: grey;
+    color: white;
+    padding: .8rem;
+    align-self: center;
+    margin: auto;
 }
